--- a/app/views/men/_form.html.haml
+++ b/app/views/men/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for @man do |f|
-  - if @man.errors.any? 
+  - if @man.errors.any?
     %div{:id=>"error_explanation"}
       %h2
         = pluralize(@man.errors.count, "error")
@@ -20,6 +20,6 @@
     = f.date_select :birth_date
     %br
     = f.label "Father"
-    = f.select :father, [1,2,3,4,5,6,7,8,9,0,10]
+    = f.select :father_id, @mens.collect{|m| [m.full_name,m.id]}
     %br
     = f.submit
