--- a/app/views/men/_form.html.haml
+++ b/app/views/men/_form.html.haml
@@ -17,7 +17,7 @@
     = f.text_field :last_name
     %br
     = f.label "Birth date"
-    = f.date_select :birth_date
+    = f.date_select :birth_date,:start_year => 1800, :end_year => Time.now.year
     %br
     = f.label "Father"
     = f.select :father_id, @mens.collect{|m| [m.full_name,m.id]}
