women controller implementation

--- a/app/views/men/index.html.haml
+++ b/app/views/men/index.html.haml
@@ -6,14 +6,17 @@
     %td Last Name
     %th
 
-
-  - @men.each do |man|
+  - if @men.blank?
     %tr
-      %td= man.first_name
-      %td= man.last_name
-      %td= link_to 'Show', man
-      %td= link_to 'Edit', edit_man_path(man)
-      %td= link_to 'Destroy', man, :confirm => 'Are you sure?', :method => :delete
+      No body
+  -else
+    - @men.each do |man|
+      %tr
+        %td= man.first_name
+        %td= man.last_name
+        %td= link_to 'Show', man
+        %td= link_to 'Edit', edit_man_path(man)
+        %td= link_to 'Destroy', man, :confirm => 'Are you sure?', :method => :delete
 
 
 = link_to 'New Man', new_man_path
